--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context="yasunin.krirk.ac.th.biwcalcalate.MainActivity">
 
+  <!--wall paper-->
+  <ImageView
+      android:scaleType="centerCrop"
+      android:src="@drawable/bg1"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />
+
   <!--Content of frangment-->
     <FrameLayout
         android:id="@+id/contentMainFragment"
