--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -9,8 +9,39 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <!--Content-->
 
+    <LinearLayout
+        android:background="#50000000"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin"
+        android:orientation="vertical"
+        android:padding="@dimen/padding">
+
+        <!--Showtext-->
+        <TextView
+            android:id="@+id/txtShowName"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold"
+            android:textSize="@dimen/h1"
+            android:text="click show Name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <!--showename buttom-->
+        <Button
+            android:id="@+id/btnShowname"
+            android:text="Show Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <!--calcular buttom-->
+            <Button
+                android:id="@+id/calculate"
+                android:text="btnCalculate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
